--- a/TaskCalendar/package.json
+++ b/TaskCalendar/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "server": "json-server --watch db.json --routes routes.json --port 5000"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +25,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "json-server": "^0.17.1",
-    "rxjs": "~7.8.0",
+    "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
